--- a/views/tmpl/admin/schedule/edit-schedule-groups.html
+++ b/views/tmpl/admin/schedule/edit-schedule-groups.html
@@ -806,7 +806,7 @@
 													</div>
 													<div class="row">
 														<div class="col-sm-12 col-md-6 form-group mt-20">
-															<button type="button" class="btn btn-default btn-ef btn-ef-6 btn-ef-6a btn-rounded" ng-click="addException(exception)" style="margin-top:1px;">Add Exception</button>
+															<button type="button" class="btn btn-default btn-ef btn-ef-6 btn-ef-6a btn-rounded" ng-click="addException(exception)" ng-disabled="validateExpiration(exception)" style="margin-top:1px;">Add Exception</button>
 														</div>
 													</div>
 												</uib-accordion-group>
@@ -821,13 +821,13 @@
 													<label class="btn btn-default" ng-model="$parent.schedule.schedule_status" uib-btn-radio="0">Inactive</label>
 												</div>
 											</div>
-											<div class="form-group col-sm-12 col-md-6" ng-hide="radioModel=='Inactive'" ng-init="mySwitch=true">
+											<div class="form-group col-sm-12 col-md-6" ng-hide="radioModel=='Inactive'" >
 												<label for="">&nbsp;</label><br/>
 												<label class="checkbox checkbox-custom-alt" style="margin-bottom:8px;">
-													<input name="customRadioAlt" type="checkbox" checked="checked" ng-model="mySwitch"><i></i> No Expirations
+													<input name="customRadioAlt" type="checkbox" checked="checked" ng-model="$parent.schedule.no_expirations" ng-true-value="1" ng-false-value="0"><i></i> No Expirations
 												</label>											
 											</div>
-											<div class="form-group col-sm-12 col-md-6" ng-hide="mySwitch" ng-controller="DatepickerDemoCtrl">
+											<div class="form-group col-sm-12 col-md-6" ng-hide="$parent.schedule.no_expirations" ng-controller="DatepickerDemoCtrl">
 												<div class="input-group">
 													<input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="$parent.$parent.schedule.selected_schedule_expiration_date" min-date="$parent.$parent.schedule.selected_schedule_start_date" is-open="opened" datepicker-options="dateOptions" close-text="Close" />
 													<span class="input-group-btn">
