--- a/views/tmpl/admin/schedule/view-schedule.html
+++ b/views/tmpl/admin/schedule/view-schedule.html
@@ -97,13 +97,13 @@
 								</div>								
 								<div class="row">
 									<div class="form-group col-sm-12 profiledetail">
-										<p><label>Timer Name</label> {{ViewSchedule.schedule_name}}</p>
+										<p><label>Schedule Name</label> {{ViewSchedule.schedule_name}}</p>
 										<p><label>Status</label> {{ViewSchedule.schedule_status | scheduleFilter}}</p>
 										<!--<p><label>Expiration Date</label> {{ViewSchedule.schedule_expiration_date | date :  "dd/MM/y"}}</p>-->
-										<p>&nbsp;</p>
+										<!-- <p>&nbsp;</p> -->
 										<!-- <p><label>Schedule Date</label> {{ViewSchedule.schedule_expiration_date}}</p> -->
-										<p><label>Start Time</label> {{ViewSchedule.schedule_start_date * 1000 | date :  "dd/MMM/y"}}</p>
-										<p><label>End Time</label> {{ViewSchedule.schedule_expiration_date * 1000 | date :  "dd/MMM/y"}}</p>
+										<p><label>Start Date</label> {{ViewSchedule.schedule_start_date * 1000 | date :  "dd/MMM/y"}}</p>
+										<p><label>End Date</label> {{ViewSchedule.schedule_expiration_date * 1000 | date :  "dd/MMM/y"}}</p>
 									</div>											
 								</div>							
 							</div>
