--- a/views/tmpl/admin/device/dependent-devices-details.html
+++ b/views/tmpl/admin/device/dependent-devices-details.html
@@ -223,7 +223,7 @@
 												{{result}}
 											</div>
 										</div>
-										<div ng-class="class">
+										<div ng-class="class" ng-cloak>
 											<div class="glview">
 												<md-content>
 													<md-card class="slaveusers" ng-repeat="user in users | limitTo:totalDisplayed | filter:text | filter:name | filter:group | orderBy:myOrderBy">
