--- a/views/tmpl/admin/device/dependent-devices.html
+++ b/views/tmpl/admin/device/dependent-devices.html
@@ -22,7 +22,7 @@
 			<div class="card-container col-sm-4 col-md-3">
 				<div class="card">
 					<a ui-sref="app.admin.device.devices">
-					<div class="noback bg-blue">						
+					<div class="noback bg-blue cardheight">						
 						<div class="row">
 							<div class="col-xs-6 ta-r">
 								<div class="iconbx">
@@ -43,7 +43,7 @@
 			<div class="card-container col-sm-4 col-md-3">
 				<div class="card">
 					<a ui-sref="app.admin.door.doors">
-					<div class="noback bg-slategray lt">						
+					<div class="noback bg-slategray lt cardheight">						
 						<div class="row">
 							<div class="col-xs-6 ta-r">
 								<div class="iconbx">
@@ -64,7 +64,7 @@
 			<div class="card-container col-sm-4 col-md-3">
 				<div class="card">
 					<a ui-sref="app.admin.user.users">
-					<div class="noback bg-lightred">						
+					<div class="noback bg-lightred cardheight">						
 						<div class="row">
 							<div class="col-xs-6 ta-r">
 								<div class="iconbx">
@@ -223,7 +223,14 @@
 									{{result}}
 								</div>
 							</div>
-							<div ng-class="class">
+							
+							<div ng-if="dependentDevice.length == 0">
+								<div layout="row" class="error" ng-class="statusclass">
+									<!--{{status}}-->
+									No Record Found
+								</div>
+							</div>
+							<div ng-class="class" ng-cloak>
 								<div class="glview">
 									<md-content>			
 										<md-card ng-repeat="device in dependentDevice | filter:text | filter:title | filter:facility | orderBy:myOrderBy">
