--- a/views/tmpl/admin/device/device-details.html
+++ b/views/tmpl/admin/device/device-details.html
@@ -356,7 +356,7 @@
 												{{result}}
 											</div>
 										</div>
-										<div ng-class="class">
+										<div ng-class="class" ng-cloak>
 											<div class="glview">
 												<md-content>			
 													<md-card class="slaveusers" ng-repeat="device in dependent_devices | filter:text | filter:title | filter:model | orderBy:myOrderBy">
