--- a/views/tmpl/admin/device/view-dependent-device.html
+++ b/views/tmpl/admin/device/view-dependent-device.html
@@ -22,7 +22,7 @@
 			<div class="card-container col-sm-4 col-md-3">
 				<div class="card">
 					<a ui-sref="app.admin.device.devices">
-					<div class="noback bg-blue">						
+					<div class="noback bg-blue cardheight">						
 						<div class="row">
 							<div class="col-xs-6 ta-r">
 								<div class="iconbx">
@@ -43,7 +43,7 @@
 			<div class="card-container col-sm-4 col-md-3">
 				<div class="card">
 					<a ui-sref="app.admin.door.doors">
-					<div class="noback bg-slategray lt">						
+					<div class="noback bg-slategray lt cardheight">						
 						<div class="row">
 							<div class="col-xs-6 ta-r">
 								<div class="iconbx">
@@ -64,7 +64,7 @@
 			<div class="card-container col-sm-4 col-md-3">
 				<div class="card">
 					<a ui-sref="app.admin.user.users">
-					<div class="noback bg-lightred">						
+					<div class="noback bg-lightred cardheight">						
 						<div class="row">
 							<div class="col-xs-6 ta-r">
 								<div class="iconbx">
@@ -117,7 +117,7 @@
 							<div class="wrap-reset m-0 pt-20">
 								<div class="form-group profiledetail">
 									<p><label>Facility Name</label> {{details.facility_name}}</p>
-									<p><label>Primary Device</label> {{details.device_name}}</p>
+									<p><label>Primary Device</label> {{details.device_master_name}}</p>
 									<p><label>Device Name</label> {{details.device_name}}</p>
 									<p><label>Model Name</label> {{details.device_model}}</p>
 									<p><label>Serial No.</label> {{details.device_serial_no}}</p>
