--- a/views/tmpl/admin/device/edit-device.html
+++ b/views/tmpl/admin/device/edit-device.html
@@ -158,13 +158,17 @@
 											</div>
 											<div class="col-sm-6 col-md-6">
 												<div class="row">
-													<!--<div class="form-group col-sm-6 col-md-6 pr-0">
+												
+												
+													<div class="form-group col-sm-6 col-md-6 pr-0">
 														<label for="">Device Type</label><br/>
 														<div disabled class="btn-group btnrounded" ng-init="editDevice.device_type='slave'">
 															<label class="btn btn-default" ng-model="editDevice.device_type" uib-btn-radio="'master'">Primary</label>
 															<label class="btn btn-default" ng-model="editDevice.device_type" uib-btn-radio="'slave'">Dependent</label>
 														</div>
-													</div>-->
+													</div>
+													
+													
 													<div class="form-group col-sm-6 col-md-6 pl-0" ng-hide="editDevice.device_type=='master'">
 														<label for="">&nbsp;</label>
 														<select required class="form-control" ng-options="item.device_id as item.device_name for item in masterDevices" ng-model="editDevice.device_master_id">
