--- a/views/tmpl/admin/schedule/view-schedule.html
+++ b/views/tmpl/admin/schedule/view-schedule.html
@@ -103,8 +103,60 @@
 										<!-- <p>&nbsp;</p> -->
 										<!-- <p><label>Schedule Date</label> {{ViewSchedule.schedule_expiration_date}}</p> -->
 										<p><label>Start Date</label> {{ViewSchedule.schedule_start_date * 1000 | date :  "dd/MMM/y"}}</p>
-										<p><label>End Date</label> {{ViewSchedule.schedule_expiration_date * 1000 | date :  "dd/MMM/y"}}</p>
-									</div>											
+										<p ng-if="ViewSchedule.no_expirations == 0"><label>End Date</label> {{ViewSchedule.schedule_expiration_date * 1000 | date :  "dd/MMM/y"}}</p>
+										<p ng-if="ViewSchedule.no_expirations == 1"><label>End Date</label> No Limits</p>
+									 <p ng-repeat="facility in ViewSchedule.facilityList ">
+									 	<label>Facility Name</label>{{facility.facility_name}}
+									 </p>
+
+
+									 <p>
+									 	<label><b>Schedules</b>	</label>
+									 </p>
+									 <p>
+									 	<label>Monday</label>
+									 	<span ng-repeat="x in ViewSchedule.schedule_mon">{{x.starttime + ' - '+ x.endtime}}<span ng-if="!$last">|</span></span>
+									 </p>
+									 <p>
+									 	<label>Tuesday</label>
+									 	<span ng-repeat="x in ViewSchedule.schedule_tue">{{x.starttime + ' - '+ x.endtime}}<span ng-if="!$last">|</span></span>
+									 </p>
+									  <p>
+									 	<label>Wednesday</label>
+									 	<span ng-repeat="x in ViewSchedule.schedule_wed">{{x.starttime + ' - '+ x.endtime}}<span ng-if="!$last">|</span></span>
+									 </p>
+									 <p>
+									 	<label>Thursday</label>
+									 	<span ng-repeat="x in ViewSchedule.schedule_thu">{{x.starttime + ' - '+ x.endtime}}<span ng-if="!$last">|</span></span>
+									 </p>
+									 <p>
+									 	<label>Friday</label>
+									 	<span ng-repeat="x in ViewSchedule.schedule_fri">{{x.starttime + ' - '+ x.endtime}}<span ng-if="!$last">|</span></span>
+									 </p>
+									 <p>
+									 	<label>Saturday</label>
+									 	<span ng-repeat="x in ViewSchedule.schedule_sat">{{x.starttime + ' - '+ x.endtime}}<span ng-if="!$last">|</span></span>
+									 </p>
+									 <p>
+									 	<label>Sunday</label>
+									 	<span ng-repeat="x in ViewSchedule.schedule_sun">{{x.starttime + ' - '+ x.endtime}}<span ng-if="!$last">|</span></span>
+									 </p>
+
+
+									 <p><label><b>Holidays</b></label>
+									 <span ng-repeat="x in ViewSchedule.holiday_observed">{{x.hs_name}}<span ng-if="!$last">&nbsp;|&nbsp;</span></span></p>
+
+									 <p><label><b>Exceptions</b></label>
+									 <ul class="" style="list-style: none;">
+										<li ng-repeat="e in ViewSchedule.schedule_exceptions">
+										
+											<span ng-if="e.se_schedule_exception.type=='ONETIME'">{{e.se_schedule_exception.status}} {{e.se_schedule_exception.date| date:'dd-MMM-yyyy'}} from {{e.se_schedule_exception.start_time}} to {{e.se_schedule_exception.end_time}}</span> 
+											<span ng-if="e.se_schedule_exception.type=='REPEATING'">(Repeating) {{e.se_schedule_exception.status}} {{e.se_schedule_exception.week}} {{e.se_schedule_exception.day}} from {{e.se_schedule_exception.start_time}} to {{e.se_schedule_exception.end_time}}</span> 
+											
+										</li>
+									</ul>
+									 </p>
+									</div>												
 								</div>							
 							</div>
 						</div>
