--- a/views/tmpl/admin/billing-information.html
+++ b/views/tmpl/admin/billing-information.html
@@ -22,7 +22,7 @@
 			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
 				<div class="card">
 					<a ui-sref="app.admin.device.devices">
-					<div class="noback bg-blue">						
+					<div class="noback bg-blue cardheight">						
 						<div class="row">
 							<div class="col-xs-6 ta-r">
 								<div class="iconbx">
