--- a/views/tmpl/admin/facility/facility-details.html
+++ b/views/tmpl/admin/facility/facility-details.html
@@ -23,7 +23,7 @@
 			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
 				<div class="card">
 					<a ui-sref="app.admin.device.devices">
-						<div class="noback bg-blue">						
+						<div class="noback bg-blue cardheight">						
 							<div class="row">
 								<div class="col-xs-4 ta-c">
 									<i class="fa fa-fax fa-5x"></i>
@@ -41,7 +41,7 @@
 			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
 				<div class="card">		
 					<a ui-sref="app.admin.device.dependent-devices">
-						<div class="noback bg-greensea">
+						<div class="noback bg-greensea cardheight">
 							<div class="row">
 								<div class="col-xs-4 ta-c">
 									<i class="fa fa-mobile fa-5x"></i>
@@ -59,7 +59,7 @@
 			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
 				<div class="card">
 					<a ui-sref="app.admin.user.users">
-						<div class="noback bg-lightred">						
+						<div class="noback bg-lightred cardheight">						
 							<div class="row">
 								<div class="col-xs-4 ta-c">
 									<i class="fa fa-users fa-5x"></i>
