--- a/views/tmpl/admin/settings.html
+++ b/views/tmpl/admin/settings.html
@@ -23,7 +23,7 @@
 			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
 				<div class="card">
 					<a ui-sref="app.admin.device.devices">
-						<div class="noback bg-blue">						
+						<div class="noback bg-blue cardheight">						
 							<div class="row">
 								<div class="col-xs-6 ta-r">
 									<div class="iconbx">
@@ -45,7 +45,7 @@
 			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
 				<div class="card">					
 					<a ui-sref="app.admin.door.doors">
-						<div class="noback bg-slategray lt">
+						<div class="noback bg-slategray lt cardheight">
 							<div class="row">
 								<div class="col-xs-6 ta-r">
 									<div class="iconbx">
@@ -67,7 +67,7 @@
 			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
 				<div class="card">
 					<a ui-sref="app.admin.user.users">
-						<div class="noback bg-lightred">						
+						<div class="noback bg-lightred cardheight">						
 							<div class="row">
 								<div class="col-xs-6 ta-r">
 									<div class="iconbx">
