--- a/views/tmpl/admin/schedule/add-schedule.html
+++ b/views/tmpl/admin/schedule/add-schedule.html
@@ -141,6 +141,7 @@
 																	<th class="calendartimehead">9pm</th>
 																	<th class="calendartimehead">10pm</th>
 																	<th class="calendartimehead">11pm</th>
+																	<th style="display:none;" class="calendartimehead">12am</th>
 																</tr>
 															</table>
 														</td>
@@ -617,6 +618,16 @@
 																	<!--td class="holidays" value="holidays">&nbsp;</td-->
 																</tr>
 																<tr value="23:00" class="23">
+																	<td class="nobrl mon" value="Monday">&nbsp;</td>
+																	<td class="tue" value="Tuesday">&nbsp;</td>
+																	<td class="wed" value="Wednesday">&nbsp;</td>
+																	<td class="thr" value="Thursday">&nbsp;</td>
+																	<td class="fri" value="Friday">&nbsp;</td>
+																	<td class="sat" value="Saturday">&nbsp;</td>
+																	<td class="sun" value="Sunday">&nbsp;</td>
+																	<!--td class="holidays" value="holidays">&nbsp;</td-->
+																</tr>
+																<tr value="24:00" class="24" style="display:none;">
 																	<td class="nobrl mon" value="Monday">&nbsp;</td>
 																	<td class="tue" value="Tuesday">&nbsp;</td>
 																	<td class="wed" value="Wednesday">&nbsp;</td>
