--- a/views/tmpl/admin/schedule/edit-schedule-groups.html
+++ b/views/tmpl/admin/schedule/edit-schedule-groups.html
@@ -141,12 +141,13 @@
 																	<th class="calendartimehead">9pm</th>
 																	<th class="calendartimehead">10pm</th>
 																	<th class="calendartimehead">11pm</th>
+																	<th class="calendartimehead" style="display:none;">12am</th>
 																</tr>
 															</table>
 														</td>
 														<td>
 															<table style="width:100%" cellspacing="0" id="table">
-																<tr value="00:00">
+																<tr value="0:00">
 																	<td class="nobrl mon" value="Monday">&nbsp;</td>
 																	<td class="tue" value="Tuesday">&nbsp;</td>
 																	<td class="wed" value="Wednesday">&nbsp;</td>
@@ -156,7 +157,7 @@
 																	<td class="sun" value="Sunday">&nbsp;</td>
 																	<!--<td class="holidays" value="holidays">&nbsp;</td>-->
 																</tr>
-																<tr value="00:30">
+																<tr value="0:30">
 																	<td class="nobrl mon" value="Monday">&nbsp;</td>
 																	<td class="tue" value="Tuesday">&nbsp;</td>
 																	<td class="wed" value="Wednesday">&nbsp;</td>
@@ -616,7 +617,17 @@
 																	<td class="sun" value="Sunday">&nbsp;</td>
 																	<!-- <td class="holidays" value="holidays">&nbsp;</td> -->
 																</tr>
-																<tr value="24:00">
+																<tr value="23:30">
+																	<td class="nobrl mon" value="Monday">&nbsp;</td>
+																	<td class="tue" value="Tuesday">&nbsp;</td>
+																	<td class="wed" value="Wednesday">&nbsp;</td>
+																	<td class="thr" value="Thursday">&nbsp;</td>
+																	<td class="fri" value="Friday">&nbsp;</td>
+																	<td class="sat" value="Saturday">&nbsp;</td>
+																	<td class="sun" value="Sunday">&nbsp;</td>
+																	<!-- <td class="holidays" value="holidays">&nbsp;</td> -->
+																</tr>
+																<tr value="23:30" style="display:none;">
 																	<td class="nobrl mon" value="Monday">&nbsp;</td>
 																	<td class="tue" value="Tuesday">&nbsp;</td>
 																	<td class="wed" value="Wednesday">&nbsp;</td>
